lib/common/libs/polygonidcore/native_polygonidcore.dart


  late final _PLGNAtomicQuerySigV2OnChainInputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNAtomicQuerySigV2OnChainInputs');
  late final _PLGNAtomicQuerySigV2OnChainInputs =
      _PLGNAtomicQuerySigV2OnChainInputsPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNAtomicQueryMtpV2OnChainInputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAtomicQueryMtpV2OnChainInputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNAtomicQueryMtpV2OnChainInputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNAtomicQueryMtpV2OnChainInputs');
  late final _PLGNAtomicQueryMtpV2OnChainInputs =
      _PLGNAtomicQueryMtpV2OnChainInputsPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNAtomicQueryV3Inputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAtomicQueryV3Inputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNAtomicQueryV3InputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNAtomicQueryV3Inputs');
  late final _PLGNAtomicQueryV3Inputs = _PLGNAtomicQueryV3InputsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNAtomicQueryV3OnChainInputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAtomicQueryV3OnChainInputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNAtomicQueryV3OnChainInputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNAtomicQueryV3OnChainInputs');
  late final _PLGNAtomicQueryV3OnChainInputs =
      _PLGNAtomicQueryV3OnChainInputsPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNALinkedMultiQueryInputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNALinkedMultiQueryInputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNALinkedMultiQueryInputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNALinkedMultiQueryInputs');
  late final _PLGNALinkedMultiQueryInputs =
      _PLGNALinkedMultiQueryInputsPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNAGenerateInputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAGenerateInputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNAGenerateInputsPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNAGenerateInputs');
  late final _PLGNAGenerateInputs = _PLGNAGenerateInputsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  void PLGNFreeStatus(
    ffi.Pointer<PLGNStatus> status,
  ) {
    return _PLGNFreeStatus(
      status,
    );
  }

  late final _PLGNFreeStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PLGNStatus>)>>(
          'PLGNFreeStatus');
  late final _PLGNFreeStatus =
      _PLGNFreeStatusPtr.asFunction<void Function(ffi.Pointer<PLGNStatus>)>();

  int PLGNCleanCache(
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNCleanCache(
      status,
    );
  }

  late final _PLGNCleanCachePtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNCleanCache');
  late final _PLGNCleanCache = _PLGNCleanCachePtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNCleanCache2(
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNCleanCache2(
      cfg,
      status,
    );
  }

  late final _PLGNCleanCache2Ptr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNCleanCache2');
  late final _PLGNCleanCache2 = _PLGNCleanCache2Ptr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNCacheCredentials(
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNCacheCredentials(
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNCacheCredentialsPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNCacheCredentials');
  late final _PLGNCacheCredentials = _PLGNCacheCredentialsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNW3CCredentialFromOnchainHex(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNW3CCredentialFromOnchainHex(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNW3CCredentialFromOnchainHexPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNW3CCredentialFromOnchainHex');
  late final _PLGNW3CCredentialFromOnchainHex =
      _PLGNW3CCredentialFromOnchainHexPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNW3CCredentialFromAnonAadhaarInputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNW3CCredentialFromAnonAadhaarInputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNW3CCredentialFromAnonAadhaarInputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNW3CCredentialFromAnonAadhaarInputs');
  late final _PLGNW3CCredentialFromAnonAadhaarInputs =
      _PLGNW3CCredentialFromAnonAadhaarInputsPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNDescribeID(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNDescribeID(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNDescribeIDPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNDescribeID');
  late final _PLGNDescribeID = _PLGNDescribeIDPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNBabyJubJubSignPoseidon(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubSignPoseidon(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNBabyJubJubSignPoseidonPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNBabyJubJubSignPoseidon');
  late final _PLGNBabyJubJubSignPoseidon =
      _PLGNBabyJubJubSignPoseidonPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNBabyJubJubVerifyPoseidon(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubVerifyPoseidon(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }
